Fixed the alignment of the body

--- a/css/main.css
+++ b/css/main.css
@@ -43,12 +43,12 @@ h1 {
 .firstUL,
 .yogaTypeQuestion {
   font-family: 'News Cycle', sans-serif;
-  font-size: 20px;
+  font-size: 18px;
   color:  rgb(18, 24, 102);
 
 }
 
-.arrowAlert {
+/*.arrowAlert {
   font-family: 'News Cycle', sans-serif;
   font-size: 18px;
   font-weight: bolder;
@@ -58,7 +58,7 @@ h1 {
 .arrowText{
   border: 0px;
   width: 70%;
-}
+}*/
 li {
 list-style-type: none;
 }
@@ -74,7 +74,6 @@ list-style-type: none;
 .row{
   padding:0%, 5%, 5%, 5%;
   background-color: #f9ffff;
-  /*background-color: lightgreen;*/
 }
 
 .initialHeader,
@@ -82,7 +81,8 @@ list-style-type: none;
 font-family: 'Istok Web', sans-serif;
 color:  rgb(18, 24, 102);
 font-weight: bolder;
-font-size: 34px;
+font-size: 38px;
+/*margin-left: none;*/
 }
 
 /*API DETAILS STYLING*/
@@ -91,6 +91,7 @@ font-size: 34px;
   font-family: 'News Cycle', sans-serif;
   font-size: 20px;
   color:  rgb(18, 24, 102);
+  /*margin-left: 20px;*/
 }
 
 /*Footer Styling*/
